# dnascanner

./: .gitignore  README.md  pyproject.toml
dnascanner/: ancestry.py  download.py  report.py  scan.py
